--- a/gmail.html
+++ b/gmail.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="main-menu">
                 <img  src="images/menubar.jpg" class="menuicon">
-                <img  src="images/newgmaillogo.jpg" class="gmail"> 
+                <img  src="images/newgmaillogo.jpg" class="gmail">
                 <img src="images/search.jpg" class="search-icon">
                 <input type="search" placeholder="search mail" class="search-btn">
                 <img src="images/close.jpg" class="close-icon">
@@ -46,7 +46,7 @@
                         <button class="navbutton"><img src="images/pro.png" class="sideimg material-icons">parvathy &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+</button>
                     </div>
                 </div>
-                <div class="select">
+                <div class="select middlediv">
                     <div class="middlediv" >
                         <div class="msg-toggle">
                             <img src="images/checkbox.png" class="help vmiddle"><img src="images/more.png" class="arrow">
@@ -70,7 +70,7 @@
                         </div>   
                     </div>
                 </div>
-                <div class="rightfloat widgets ">
+                <div class=" select rightfloat widgets ">
                     <img src="images/calendar.png" class="widgets-img">
                     <img src="images/keep.png" class="widgets-img">
                     <img src="images/task.png" class="widgets-img">
