--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,20 +10,27 @@
     </head>
     <body>
         <div class="container">
-            <div class="main-menu">
-                <img  src="images/menubar.jpg" class="menuicon">
-                <img  src="images/newgmaillogo.jpg" class="gmail"> 
-                <img src="images/search.jpg" class="search-icon">
-                <input type="search" placeholder="search mail" class="search-btn">
-                <img src="images/close.jpg" class="close-icon">
-                <img src="images/showopt.png" class="show-opt">
-                <div class="right">
-                    <img src="images/help.jpg"  class="help">
-                    <img src="images/settings.jpg" class="help">
-                    <img src="images/9dots.jpg" class="help ">
+            <div class="head-container">
+                <div class="left-head">
+                    <img  src="images/menubar.jpg" class="menuicon">
+                    <img  src="images/newgmaillogo.jpg" class="gmail"> 
+                </div>
+                <div class="middle-head">
+                    <input type="search" placeholder="search mail" class="search-btn">
+                    <img src="images/search.jpg" class="search-icon">
+                    <img src="images/showopt.png" class="show-opt">
+
+                </div>
+                <div class="right-head">
+                    <img src="images/help.jpg"  class="right-pics">
+                    <img src="images/settings.jpg" class="right-pics">
+                    <img src="images/9dots.jpg" class="right-pics">
                     <img src="images/pro.png" class="help round">
                 </div>
+                
+
             </div>
+
                 <div class="select">
                     <div class="leftdiv" >
                         <img src="images/compose.jpg" class="compose">
@@ -51,7 +58,7 @@
                     <div class="middlediv" >
                         <div class="msg-toggle">
                             <img src="images/checkbox.png" class="toggle vmiddle"><img src="images/more.png" class="more">
-                            <img src="images/refresh.png" class="toggle vmiddle">
+                            <img src="images/refresh.png" class="help vmiddle">
                             <img src="images/3dot.png" class="help vmiddle">
                             <div class="rightfloat navmsg">
                                 <button> 1 to 50 of 1250</button>
@@ -70,19 +77,31 @@
                             Social</button>
                             <button class="promotion">
                             Promotion</button>
-                        </div>
-                          
+                        </div> 
                     </div>
                     <div class="msgdiv">
-                        <img src="images/Checkbox-Empty-icon.png" class="content-check"> 
+                        <input type="checkbox">
                         <img src= "images/stargrey.jpg"  class="content-check">
                         <span class ="heading">zomato</span>
                          <span class="msg-content" > Delivery Partner of the Week Umesh Sharma 
                         </span>
                     </div>
-
+                    <div class="msgdiv">
+                        <input type="checkbox">
+                        <img src= "images/stargrey.jpg"  class="content-check">
+                        <span class ="heading">zomato</span>
+                         <span class="msg-content" > Delivery Partner of the Week Umesh Sharma 
+                        </span>
+                    </div>
+                    <div class="msgdiv">
+                        <input type="checkbox">
+                        <img src= "images/stargrey.jpg"  class="content-check">
+                        <span class ="heading">zomato</span>
+                         <span class="msg-content" > Delivery Partner of the Week Umesh Sharma 
+                        </span>
+                    </div>
                 </div>
-                <div class="rightfloat widgets ">
+                <div class="widgets ">
                     <img src="images/calendar.png" class="widgets-img">
                     <img src="images/keep.png" class="widgets-img">
                     <img src="images/task.png" class="widgets-img">
