--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,18 +3,17 @@
         <title>
 
         </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/st.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="container">
             <div class="head-container">
                 <div class="left-head">
-                    <img  src="images/menubar.jpg" class="menuicon">
-                    <img  src="images/newgmaillogo.jpg" class="gmail"> 
+                    <div><img  src="images/menubar.jpg" class="menuicon"></div>
+                    <div><img  src="images/newgmaillogo.jpg" class="gmail"> </div>
                 </div>
+			<div class="clear"> </div>
                 <div class="middle-head">
                     <input type="search" placeholder="search mail" class="search-btn">
                     <img src="images/search.jpg" class="search-icon">
@@ -22,11 +21,12 @@
 
                 </div>
                 <div class="right-head">
-                    <img src="images/help.jpg"  class="right-pics">
-                    <img src="images/settings.jpg" class="right-pics">
-                    <img src="images/9dots.jpg" class="right-pics">
-                    <img src="images/pro.png" class="right-pics round ">
+                    <img src="images/help.png"  class="right-pics helpicon">
+                    <img src="images/settings.jpg" class="right-pics settings">
+                    <img src="images/9dots.jpg" class="right-pics dots">
+                    <img src="images/pro.png" class="right-pics round pro ">
                 </div>
+			<div class="clear"> </div>
             </div>
                 <div class="select">
                     <div class="leftdiv" >
@@ -62,7 +62,9 @@
                                 <button class="navmsg round-btn"> &lt;</button>
                                 <button class="navmsg round-btn"> &#62; </button>
                                 <img src="images/key.jpg" class="key"><img src="images/more.png" class="arrows-key">
+						<div class="clear"> </div>
                             </div>
+					<div class="clear"> </div>
                         </div>
                         <div class="sections">
                             <button class="primary">
@@ -72,14 +74,18 @@
                             Social</button>
                             <button class="promotion">
                             Promotion</button>
+					<div class="clear"> </div>
                         </div> 
+				
                     </div>
                     <div class="msgdiv">
                         <input type="checkbox">
-                        <img src= "images/stargrey.jpg"  class="content-check">
-                        <span class ="heading">zomato</span>
+				<img src= "images/stargrey.jpg" class="content-check">
+                        <span class ="heading"> zomato</span>
                          <span class="msg-content" > Delivery Partner of the Week Umesh Sharma 
                         </span>
+                        <span class="time">3.30 p.m</span>
+				<div class="clear"> </div>
                     </div>
                     <div class="msgdiv">
                         <input type="checkbox">
@@ -88,6 +94,7 @@
                          <span class="msg-content" > Delivery Partner of the Week Umesh Sharma 
                         </span>
                         <span class="time">3.30 p.m</span>
+				<div class="clear"> </div>
                     </div>
                     <div class="msgdiv">
                         <input type="checkbox">
@@ -96,6 +103,7 @@
                          <span class="msg-content" > Delivery Partner of the Week Umesh Sharma 
                         </span>
                         <spam class="time">4.50 p.m</spam>
+				<div class="clear"> </div>
                     </div>
                     <div class="msgdiv">
                         <input type="checkbox">
@@ -104,14 +112,40 @@
                          <span class="msg-content" >KKEM :Introducing the Trends and Opportunities in Cyber Security
                         </span>
                         <spam class="time">6.00 p.m</spam>
+				<div class="clear"> </div>
+                    </div>
+                    <div class="msgdiv">
+                        <input type="checkbox">
+                        <img src= "images/stargrey.jpg"  class="content-check">
+                        <span class ="heading">
+                            Stack Overflow </span>
+                         <span class="msg-content" >Your friendly, fear-free guide to getting started
+                        </span>
+                        <spam class="time">6.20 p.m</spam>
+				<div class="clear"> </div>
+                    </div>
+                    <div class="msgdiv">
+                        <input type="checkbox">
+                        <img src= "images/stargrey.jpg"  class="content-check">
+                        <span class ="heading">
+                            Relevel by Unacademy</span>
+                         <span class="msg-content" >Get Hired, Win Exciting Prizes & More With the Relevel Select!🤩
+                        </span>
+                        <spam class="time">6.40 p.m</spam>
+				<div class="clear"> </div>
+                    </div>
+                    <div class="msgdiv">
+                        <input type="checkbox">
+                        <img src= "images/stargrey.jpg"  class="content-check">
+                        <span class ="heading">
+                            Stack Overflow </span>
+                         <span class="msg-content" >Your friendly, fear-free guide to getting started
+                        </span>
+                        <spam class="time">6.50 p.m</spam>
+				<div class="clear"> </div>
                     </div>
                 </div>
-                <div class="widgets ">
-                    <img src="images/calendar.png" class="widgets-img">
-                    <img src="images/keep.png" class="widgets-img">
-                    <img src="images/task.png" class="widgets-img">
-                    <img src="images/contacts.png" class="widgets-img">
-                </div>
+			<div class="clear"> </div>
         </div> 
     </body>
 </html>
